Working with AWS v2, but had to remove sorting of comments